few small code improvements